service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-multitool-service
spec:
  selector:
    app: nginx-multitool
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: multitool
      port: 8080
      targetPort: 8080
  type: ClusterIP
