ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-multitool-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - nginx-multitool.com
    secretName: nginx-tls-secret
  rules:
  - host: nginx-multitool.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-multitool-service
            port:
              number: 80
